--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "date-fns": "^2.28.0",
     "http-server": "^14.1.0"
   },
   "devDependencies": {},
